--- a/pizzaria/src/components/styles/SlideShow.css
+++ b/pizzaria/src/components/styles/SlideShow.css
@@ -3,14 +3,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 600px; /* Altura definida por você */
-    position: relative; /* Para posicionar os botões */
+    height: 600px; 
+    position: relative; 
 }
 
 .item-slide img {
-    padding-top: 80px; /* Espaço do topo */
+    padding-top: 80px; 
     width: 100%;
-    height: 100%; /* Para manter a proporção da imagem */
+    height: 100%; 
     object-fit: cover;
 }
 
@@ -23,35 +23,35 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    z-index: 10; /* Botões acima das imagens */
+    z-index: 10; 
 }
 
 .nav-button:first-of-type {
-    left: 10px; /* Botão esquerdo */
+    left: 10px; 
 }
 
 .nav-button:last-of-type {
-    right: 10px; /* Botão direito */
+    right: 10px;
 }
 
 .indicators {
     display: flex;
-    justify-content: center; /* Centraliza os indicadores */
-    position: absolute; /* Para posicionar em relação ao container */
-    bottom: 20px; /* Distância do fundo do container */
-    left: 0; /* Para começar da esquerda */
-    right: 0; /* Para ir até a direita */
+    justify-content: center;
+    position: absolute; 
+    bottom: 20px;
+    left: 0;
+    right: 0; 
 }
 
 .indicator {
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background-color: #ccc; /* Cor padrão dos indicadores */
-    margin: 0 5px; /* Espaço entre os indicadores */
+    background-color: #ccc;
+    margin: 0 5px;
     cursor: pointer;
 }
 
 .indicator.active {
-    background-color: #333; /* Cor do indicador ativo */
+    background-color: #333;
 }
